Fix: ADD tiptap extensions

--- a/assets/scss/tiptap.scss
+++ b/assets/scss/tiptap.scss
@@ -1,19 +1,72 @@
 .tiptap {
+  padding: 8px;
+  box-sizing: border-box;
+  min-width: 100%;
+  border: 1px solid #616161;
+  border-radius: 4px;
   > * + * {
     margin-top: 0.75em;
   }
 
+  ul,
+  ol {
+    padding: 0 1rem;
+  }
   code {
+
     background-color: rgba(#616161, 0.1);
     color: #616161;
   }
-}
 
+  pre {
+    background: #0d0d0d;
+    color: #fff;
+    font-family: "JetBrainsMono", monospace;
+    padding: 0.75rem 1rem;
+    border-radius: 0.5rem;
+
+    code {
+      color: inherit;
+      padding: 0;
+      background: none;
+      font-size: 0.8rem;
+    }
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  blockquote {
+    padding-left: 1rem;
+    border-left: 2px solid rgba(#0d0d0d, 0.1);
+  }
+
+  hr {
+    border: none;
+    border-top: 2px solid rgba(#0d0d0d, 0.1);
+    margin: 2rem 0;
+  }
+}
 .content {
   padding: 1rem 0 0;
 
+  h1 {
+    font-size: 40px;
+    margin-bottom: 10px;
+  }
+  h2 {
+    font-size: 32px;
+    margin-bottom: 8px;
+  }
   h3 {
-    margin: 1rem 0 0.5rem;
+    font-size: 24px;
+    margin-bottom: 6px;
+  }
+  h4 {
+    font-size: 20px;
+    margin-bottom: 4px;
   }
 
   pre {
@@ -28,5 +81,7 @@
     padding: 0.75rem 1rem;
     background-color: #e9ecef;
     color: #495057;
+    box-sizing: border-box;
+    border-radius: 4px;
   }
 }
