--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -31,6 +31,7 @@ footer, header, hgroup, menu, nav, section {
 body {
   font-size: 16px;
 	line-height: 1.25;
+	background-color: #020715;
 }
 ol, ul {
 	list-style: none;
