--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -29,6 +29,7 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
+	min-height: 100vh;
   font-size: 16px;
 	line-height: 1.25;
 	background-color: #020715;
